Bug 350756 - KDE systemsettings language module does not show hotkeys assigned per-layout
Summary: KDE systemsettings language module does not show hotkeys assigned per-layout
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keyboard_layout (other bugs)
Version First Reported In: 5.3.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Andriy Rysin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-29 16:38 UTC by Mike Krutov
Modified: 2015-09-17 07:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Krutov 2015-07-29 16:38:16 UTC
Companion of this bug:
https://bugs.kde.org/show_bug.cgi?id=350755
I've got 3 languages, each has a hotkey assigned to it. This hotkeys are not shown as expected in "Shortcut" column of systemsettings. 
Two screenshots displaying problem: http://imgur.com/HVVIFRU,JPo9BMd (first image/second image taken within 1 session without no changes to configuration).

Reproducible: Always
Comment 1 David Rosca 2015-09-17 07:32:10 UTC
Git commit df9e9e08d3ac6f5d81763cb7164c1f71530abff1 by David Rosca.
Committed on 17/09/2015 at 07:30.
Pushed by drosca into branch 'Plasma/5.4'.

kcm_keyboard: Fix showing shortcuts

Fix showing shortcuts for Alternate Layout Switching
and individual layouts.
FIXED-IN: 5.4.2
REVIEW: 125264

M  +5    -6    kcms/keyboard/kcm_keyboard_widget.cpp

http://commits.kde.org/plasma-desktop/df9e9e08d3ac6f5d81763cb7164c1f71530abff1