kcm_keyboard: Fix showing shortcuts

Fix showing shortcuts for Alternate Layout Switching
and individual layouts.

BUG: 350756
FIXED-IN: 5.4.2
REVIEW: 125264