kcms/keyboard/kcm_keyboard_widget.cpp
@@ -386,7 +386,7 @@ void KCMKeyboardWidget::previewLayout(){
             break;
         }
     }
-    
+
     QString title = Flags::getLongText( LayoutUnit(country, variant), rules );
     layoutPreview->generateKeyboardLayout(country,variant, model, title);
     layoutPreview->setModal(true);
@@ -644,11 +644,10 @@ void KCMKeyboardWidget::updateShortcutsUI()
 
 	delete actionCollection;
 	actionCollection = new KeyboardLayoutActionCollection(this, true);
-	//QAction* toggleAction = 
-	actionCollection->getToggeAction();
-//    const auto shortcuts = KGlobalAccel::self()->shortcut(toggleAction);
-//    uiWidget->kdeKeySequence->setKeySequence(shortcuts.isEmpty() ? QKeySequence() : shortcuts.first());
-//    actionCollection->loadLayoutShortcuts(keyboardConfig->layouts, rules);
+	QAction* toggleAction = actionCollection->getToggeAction();
+	const auto shortcuts = KGlobalAccel::self()->shortcut(toggleAction);
+	uiWidget->kdeKeySequence->setKeySequence(shortcuts.isEmpty() ? QKeySequence() : shortcuts.first());
+	actionCollection->loadLayoutShortcuts(keyboardConfig->layouts, rules);
 	layoutsTableModel->refresh();
 }
 
